--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ executors:
   default_container:
     docker:
       - image: circleci/ruby:2.7.2 -node
-        enviroment:
+        environment:
           RAILS_ENV: test
           BUNDLE_JOBS: 4
           BUNDLE_RETRY: 3
@@ -12,14 +12,14 @@ executors:
 
       - image: circleci/mysql:5.7.32
         command: mysqld --default-authentication-plugin=mysql_native_password
-        enviroment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: true
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: root
     working_directory: ~/target
 commands:
   install_bundler:
     description: Bundler install
     steps:
-      -run: gem install bundler -v 2.2.23
+      - run: gem install bundler -v 2.2.23
 
 jobs:
   fetch_source_code:
@@ -28,7 +28,7 @@ jobs:
     steps:
       - checkout
       - save_cache:
-          key: v1 -target-{{.Enviroment.CIRCLE_SHA1}}
+          key: v1 -target-{{.Environment.CIRCLE_SHA1}}
           paths:
             - ~/target
   bundle_dependencies:
@@ -36,7 +36,7 @@ jobs:
       name: default_container
     steps:
       - restore_cache:
-          key: v1 -target-{{ .Enviroment.CIRCLE_SHA1 }}
+          key: v1 -target-{{ .Environment.CIRCLE_SHA1 }}
       - restore_cache:
           key: v1 -dependencies-{{ checksum "Gemfile.lock" }}
       - install_bundler
@@ -53,7 +53,7 @@ jobs:
       name: default_container
     steps:
       - restore_cache:
-          key: v1 -target-{{ .Enviroment.CIRCLE_SHA1 }}
+          key: v1 -target-{{ .Environment.CIRCLE_SHA1 }}
       - restore_cache:
           key: v1 -dependencies-{{ checksum "Gemfile.lock" }}
       - run:
@@ -89,9 +89,9 @@ jobs:
       name: default_container
     steps:
       - restore_cache:
-          key:v1 -target-{{ .Enviroment.CIRCLE_SHA1 }}
+          key:  v1 -target-{{ .Environment.CIRCLE_SHA1 }}
       - restore_cache:
-          key:v1 -dependencies-{{ checksum "Gemfile.lock" }}
+          key:  v1 -dependencies-{{ checksum "Gemfile.lock" }}
       - install_bundler
       - run:
           name: Execute rubocop
@@ -102,10 +102,10 @@ workflows:
     jobs:
       - fetch_source_code
       - bundle_dependencies:
-          require:
+          requires:
             - fetch_source_code
       - rubocop:
-          require:
+          requires:
             - bundle_dependencies
       - rspec:
           requires:
