edit rubocop ci

--- a/config/rubocop/rails.yml
+++ b/config/rubocop/rails.yml
@@ -49,3 +49,12 @@ Rails/UnknownEnv:
     - test        # rubocop default.yml
     - production  # rubocop default.yml
     - staging
+
+Rails/BulkChangeTable:
+  Enabled: false
+
+Rails/UniqueValidationWithoutIndex:
+  Enabled: false
+
+Rails/NotNullColumn:
+  Enabled: false
