--- a/config/rubocop/rspec.yml
+++ b/config/rubocop/rspec.yml
@@ -20,7 +20,7 @@ RSpec/EmptyLineAfterFinalLet:
 # feature spec は exclude でも良いかもしれない。
 # ヒアドキュメント使うと一瞬で超えるので disable も検討。
 RSpec/ExampleLength:
-  Max: 8
+  Max: 10
 
 # block の方がテスト対象が
 # * `{}` の前後のスペースと相まって目立つ
@@ -36,6 +36,18 @@ RSpec/ImplicitExpect:
 # let を使うのは context 間で条件が違うものが存在する時だけにしたい。
 # before の方が事前条件を整えていることが分かりやすい。
 RSpec/InstanceVariable:
+  Enabled: false
+
+# spec_helper で meta[:aggregate_failures] を設定することで
+# aggregate_failures が全ての spec で有効になる。
+#
+# ほぼ MultipleExpectations についてはチェックされなくなる設定なので注意。
+# パフォーマンスの問題さえ無ければ 1 example 1 assertion にしておく方が
+# 読みやすいテストになりやすいので、そこはレビューで担保していく必要がある。
+RSpec/MultipleExpectations:
+  Enabled: false
+
+RSpec/MultipleMemoizedHelpers:
   Enabled: false
 
 # 変に名前つけて呼ぶ方が分かりづらい。
@@ -59,4 +71,8 @@ RSpec/NestedGroups:
 # ブロックは初見だと返り値を書いていると気づけないので and_return にしたいが、
 # ブロックの方が見た目がスッキリして見やすいので、どちらでもお好きにどうぞ。
 RSpec/ReturnFromStub:
+  Enabled: false
+
+# context ごとに let! を使い分けたい場合があるため無効に
+RSpec/LetSetup:
   Enabled: false
