--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -41,13 +41,12 @@ Layout/FirstHashElementIndentation:
 Layout/IndentationConsistency:
   EnforcedStyle: indented_internal_methods
 
-# * 警告 120文字
-# * 禁止 160文字
-# のイメージ
+
 Layout/LineLength:
-  Max: 160
+  Max: 185
   Exclude:
     - "db/migrate/*.rb"
+    - "bundle/bin/bundle"
 
 # メソッドチェーン感がより感じられるインデントにする
 Layout/MultilineMethodCallIndentation:
@@ -142,7 +141,7 @@ Metrics/MethodLength:
 
 # 分岐の数。ガード句を多用しているとデフォルト 7 だと厳しい
 Metrics/PerceivedComplexity:
-  Max: 8
+  Max: 9
 
 
 #################### Naming ################################
